--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.1.0",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.477.0",
     "react": "^19.1.0",
