--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "inngest": "^3.40.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "streamifier": "^0.1.1"
   }
