--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,11 @@ FROM node:20-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+# Accept build argument
+ARG VITE_BACKEND_URL
+ENV VITE_BACKEND_URL=${VITE_BACKEND_URL}    
+ARG VITE_PAYPAL_CLIENT_ID
+ENV VITE_PAYPAL_CLIENT_ID=${VITE_PAYPAL_CLIENT_ID}   
 COPY . .
 RUN npm run build     
 
