--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            docker image prune -af || true  
             docker pull lautee/luvowear-frontend:latest
             docker pull lautee/luvowear-backend:latest
             docker network create luvowear-net || true
