Fix some bug on checkout

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "luvowear",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Ecommerce",
+  "description": "LuvoWear Backend",
   "type": "module",
   "main": "server.js",
   "scripts": {
