--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.1",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
